--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,8 @@ body {
     color: #3a3a3a;
 }
 
+/* headings and logo */
+
 h1, h2 {
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
@@ -23,6 +25,8 @@ h1, h2 {
     float: left;
     font-size: 280%;
 }
+
+/* navigation links */
 
 #menu {
     font-size: 110%;
@@ -50,4 +54,12 @@ h1, h2 {
 
 .active {
     border-bottom: 1px solid #3a3a3a;
+}
+
+/* hero image */
+
+#hero-image {
+    height: 600px;
+    width: 100%;
+    background: url('../images/hero-image.webp') no-repeat center center;
 }
